client/src/app/page.module.css
.HomePage {
}

.goStellarBtn {
  height: 50px !important;
  font-size: 18px !important;
  background: linear-gradient(45deg, #0072f5, #cb5edc) !important;
}

.scheduleDemoBtn {
  height: 50px !important;
  font-size: 18px !important;
  border-radius: 4px !important;
  margin-left: 12px !important;
}

.content {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.header {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  margin-bottom: 24px;
  position: relative;
}

.header .title {
  font-size: 76px;
  line-height: 54px;
  font-weight: 600;
  margin-bottom: 24px;
  color: var(--primary);
  z-index: 1;
  background: linear-gradient(45deg, #0072f5, #cb5edc);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
  line-height: 1.2;
}

.header .description {
  font-size: 18px;
  opacity: 0.5;
  max-width: 675px;
  z-index: 1;
}

.ctaSection {
  display: flex;
  flex-direction: column;
  align-items: center;
  z-index: 1;
}

.points {
  display: flex;
  margin-top: 12px;
}

.lightest,
.noCard {
  font-size: 14px;
  color: gray;
  font-weight: 300;
  border-bottom: 1px dashed gray;
}

.lightest {
  margin-left: 16px;
}

.description b {
  font-weight: 500;
}

.form {
  margin: 24px 0 32px 0;
}

.bullets {
  display: flex;
  margin-top: 16px;
}

.bullet span {
  color: var(--linkBlue);
  font-weight: 600;
}

.bullets div {
  margin-right: 24px;
}

.faqs {
  /* maxwidth: 750px; */
}

.loomContainer {
  box-shadow: 0px 0px 25px hsl(0deg 0% 0% / 0.25);
  position: relative;
  margin-top: 48px;
  width: 675px;
  border: 1px solid #cb5edc;
  border-radius: 8px;
  overflow: hidden;
  transition: 0.75s;
  margin-bottom: 64px;
  z-index: 1;
  background-color: white;
}

.loomContainer:hover {
  box-shadow: 0px 0px 25px hsl(292 64% 62% / 0.35);
}

.loomContainer iframe {
  width: 100%;
  height: 400px;
}

.loomContainer:hover .infoBar {
  opacity: 0;
}

.infoBar {
  transition: opacity 0.2s;
  background-color: var(--linkBlue);
  color: white;
  position: absolute;
  top: 0;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 30px;
  text-align: center;
}

.varA {
  color: var(--linkBlue);
}
.varB {
  color: #cb5edc;
}

.advantages {
  padding: 48px;
  border-radius: 4px;
  background: linear-gradient(45deg, #0072f5, #cb5edc);
  width: 100%;
  color: white;
  margin-bottom: 64px;
}

.advantages h3 {
  text-align: center;
  font-size: 32px;
  color: white;
  margin: 0 0 24px 0;
}

.advantage .icon {
  width: 30px;
  height: 30px;
  border-radius: 20px;
  border: 1px solid white;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-bottom: 12px;
}

.advantages .advantage {
  max-width: 200px;
  font-weight: 300;
  margin-right: 42px;
}

.advantages .advantage:last-child {
  margin-right: 0;
}

.advantages .list {
  display: flex;
  justify-content: center;
}

.advantages.quote {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background: linear-gradient(45deg, #0053b3, #61a7e8);
}

.startFreeBtn {
  border-radius: 4px !important;
  background-color: white !important;
  margin-top: 32px;
  color: var(--primary) !important;
  font-size: 16px !important;
}

.advantages.quote h3 {
  margin: 0;
  font-weight: 200;
  width: 800px;
  text-align: center;
}

.process {
  width: 100%;
}

.row {
  display: flex;
  gap: 24px;
  margin-bottom: 32px;
}

.process .row .block {
  padding: 32px;
  margin-bottom: 0;
}

.row .block .texts {
  margin-bottom: 16px;
}

.row .block,
.row .multiBlock {
  width: 50%;
}

.multiBlock {
  display: flex;
  flex-direction: column;
  gap: 24px;
}

.card {
  padding: 24px;
  background-color: #fff4fe;
  border-radius: 4px;
  border: 1px solid #ffd0fd;
  flex-grow: 1;
}

.cardTitle {
  font-size: 18px;
  font-weight: 600;
  margin: 0 0 8px 0;
  color: var(--primary);
}

.card p {
  color: var(--textBody);
  font-weight: 300;
}

.process .block {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 64px;
  text-align: center;
  border-radius: 4px;
}

.row:nth-child(1) .block {
  background: linear-gradient(45deg, #f8bdf4, #ffdbfd);
}

.row:nth-child(2) .block {
  background: linear-gradient(45deg, #7dc7ff, #a8daff);
}

.row:nth-child(2) .card {
  background-color: #ebf6ff;
  border: 1px solid #76b3f9;
}

.block:nth-child(3) {
  background: linear-gradient(45deg, #f7cd72, #ffe4a8);
}

.block {
  margin-bottom: 64px;
}

.block .texts {
  margin-bottom: 32px;
  max-width: 700px;
}

.block .texts .title {
  font-size: 36px;
}

.block .texts p {
  font-size: 18px;
  font-weight: 300;
  color: rgba(0, 0, 0, 0.75);
}

.block video,
.block img {
  box-shadow: 0px 0px 10px hsl(0deg 0% 0% / 0.25);
  border-radius: 4px;
  transition: 1s;
  border: 1px solid rgba(0, 0, 0, 0.2);
  max-width: 750px;
}

.block video:hover,
.block img:hover {
  box-shadow: 0px 0px 25px hsl(292 64% 62% / 0.35);
}

.block .title {
  font-size: 28px;
  margin-bottom: 12px;
  line-height: normal;
  color: var(--primary);
}

.biteTestimonials {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 0 0 74px 0;
}

.biteTestimonials h3 {
  font-size: 32px;
  line-height: normal;
  max-width: 675px;
  margin-bottom: 20px;
  color: var(--primary);
  text-align: center;
}

.bite {
  display: flex;
  align-items: center;
  padding: 4px 6px;
  padding-right: 10px;
  border: 1.5px solid var(--primary);
  border-radius: 40px;
  margin: 8px;
}

.bite .avPic {
  height: 40px;
  width: 40px;
  border-radius: 20px;
  background-color: var(--primary);
  margin-right: 8px;
}

.bitesContainer {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  width: 115%;
}

.notSure {
  padding: 64px;
  text-align: center;
  border: 1px solid #0072f5;
  border-radius: 4px;
}

.notSure h3 {
  font-size: 32px;
  color: var(--primary);
}

.notSure h3 span {
  background: linear-gradient(45deg, #0072f5, #cb5edc);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.scheduleBtn {
  /* background-color: var(--linkBlue)!important; */
  /* color: white!important; */
  border-radius: 4px !important;
}

.cardContainer {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
}

.notSure {
  padding: 64px;
  background-color: #f5f5f5;
  width: 100%;
  margin-top: 64px;
}

.notSure h3 {
  margin-bottom: 16px;
}

/* .bgDeco {
  width: 650px;
  height: 200px;
  background-color: var(--primary);
  opacity: .1;
  border-radius: 16px;
  margin: 75px 0;
}

.card {
  padding: 32px;
  position: absolute;
  height: 270px;
  width: 500px;
  background-color: white;
  box-shadow: 0px 0px 25px hsl(292 64% 62% / 0.35);
  border-radius: 16px;
} */

.speedContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-bottom: 64px;
}

.speedContainer h3 {
  max-width: 675px;
  font-size: 32px;
  margin-bottom: 32px;
  text-align: center;
  color: var(--primary);
}

@media (max-width: 720px) {
  .HomePage {
    padding: 0;
  }

  .loomContainer {
    width: 100%;
    margin-top: 32px;
    margin-bottom: 32px;
  }

  .bullets {
    display: none;
  }

  .header .title {
    font-size: 48px;
    margin-bottom: 16px;
  }

  .header .description {
    font-size: 16px;
  }

  .advantages h3 {
    font-size: 28px;
  }

  .advantages .list {
    flex-direction: column;
  }

  .advantages {
    padding: 16px;
    margin-bottom: 32px;
  }

  .advantages .advantage {
    max-width: 100%;
    width: 100%;
    margin-bottom: 24px;
    margin-right: 0;
    display: flex;
  }

  .advantage:last-child {
    margin-bottom: 0;
  }

  .advantage .icon {
    min-width: 30px;
    margin-right: 8px;
  }

  .process .block {
    flex-direction: column;
    margin-bottom: 32px;
    padding: 16px;
  }

  .block .texts {
    margin-bottom: 16px;
  }

  .block .texts .title {
    font-size: 24px;
  }

  .block .texts p {
    font-size: 16px;
  }

  .process .left {
    margin-right: 0;
  }

  .process .texts {
    margin-top: 16px;
  }

  .bitesContainer {
    width: 100%;
  }

  .bite .quote {
    width: 80%;
    font-size: 14px;
  }

  .bite:last-child {
    margin-bottom: 0;
  }

  .advantages.quote {
    margin-bottom: 32px;
  }

  .advantages.quote h3 {
    width: auto;
    font-size: 24px;
  }

  .advantages .startFreeBtn {
    margin-top: 16px;
  }

  .biteTestimonials {
    padding-bottom: 32px;
  }

  .biteTestimonials h3 {
    font-size: 28px;
  }

  .points {
    flex-direction: column;
    align-items: center;
    text-align: center;
  }

  .lightest {
    margin-left: 0;
  }

  /* .goStellarBtn, .scheduleDemoBtn {
    font-size: 16px!important;
  } */

  .row {
    flex-direction: column;
  }

  .row:nth-child(2) {
    flex-direction: column-reverse;
  }

  .process .multiBlock,
  .process .block {
    width: 100%;
  }

  .speedContainer {
    margin-bottom: 32px;
  }
}

